force-app/main/default/objects/Store_Item__c/Store_Item__c.object-meta.xml
<CustomObject>
    <description>Объект, описывающий предложения от конкретного магазина по конкретному сырку.</description>
    <label>Store Item</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Store Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>