force-app/main/default/objects/Store_Item__c/fields/Sirok__c.field-meta.xml
<CustomField>
    <fullName>Sirok__c</fullName>
    <label>Sirok</label>
    <referenceTo>Sirok__c</referenceTo>
    <relationshipLabel>Store Items</relationshipLabel>
    <relationshipName>Store_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>