force-app/main/default/objects/Store_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store_Name__c</columns>
    <columns>Sirok__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>